--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -130,9 +130,9 @@
   	NProgress.start();
 	  function changeStyle(newcolor) {
 		if (newcolor != "") {
-			// console.log("[INFO] Loading the stylesheet '" + ("http://perso.crans.org/besson/_static/" + newcolor + ".css") + "'");
+			// console.log("[INFO] Loading the stylesheet '" + ("{{ pathto('_static/', true)|e }}" + newcolor + ".css") + "'");
 			$("head").append(
-		    	$("<link/>", {href: ("http://perso.crans.org/besson/_static/" + newcolor + ".css"), rel: "stylesheet"})
+		    	$("<link/>", {href: ("{{ pathto('_static/', true)|e }}" + newcolor + ".css"), rel: "stylesheet"})
 		    );
       setTimeout(function(){
         if (e == '.en.html') {
@@ -177,7 +177,7 @@
  /* TimeAgo jQuery plugin, French options. Source : https://github.com/rmm5t/jquery-timeago/blob/master/locales/jquery.timeago.fr.js */
  jQuery("abbr.timeago").timeago();
  jQuery.timeago.settings.strings = {  // TODO: translate this!
-   prefixAgo: "il y a", prefixFromNow: "d'ici", seconds: "moins d'une minute", minute: "environ une minute", minutes: "environ %d minutes", hour: "environ une heure", hours: "environ %d heures", day: "environ un jour", days: "environ %d jours", month: "environ un mois", months: "environ %d mois", year: "un an", years: "%d ans"
+   prefixAgo: "il y a", prefixFromNow: "d'ici", suffixAgo: null, suffixFromNow: null, seconds: "moins d'une minute", minute: "environ une minute", minutes: "environ %d minutes", hour: "environ une heure", hours: "environ %d heures", day: "environ un jour", days: "environ %d jours", month: "environ un mois", months: "environ %d mois", year: "un an", years: "%d ans", wordSeparator: " ", numbers: []
   };
   NProgress.inc();
  // MouseTrap (http://craig.is/killing/mice)
@@ -197,17 +197,17 @@
 {% if prev %}Mousetrap.bind(["left", "p"], function() { alert("Going to prev <a href=\"{{ prev.link|e }}\">{{ prev.link|e }}</a>"); location.href="{{ prev.link|e }}"; });{% endif %}
  Mousetrap.bind(["i"], function() { alert("Going to index.html"); location.href="index.html";});
 {% if next %}Mousetrap.bind(["right", "n"], function() { alert("Going to next <a href=\"{{ next.link|e }}\">{{ next.link|e }}</a>"); location.href="{{ next.link|e }}";});{% endif %}
-{% if last_updated %}Mousetrap.bind(["u"], function() { //'%d %b %Y, %Hh:%Mm:%Ss'
-   var last_updated_value = "{{ last_updated }}" || "16 09 2016, 12h:00m:00s";
-    var day   = last_updated_value.substring(0,  2 ) || "16";
-    var month = last_updated_value.substring(3,  6 ) || "09";
-    var year  = last_updated_value.substring(7,  11) || "2016";
-    var hours = last_updated_value.substring(13, 15) || "12";
-    var mins  = last_updated_value.substring(17, 19) || "00";
-    var secs  = last_updated_value.substring(21, 23) || "00";
-   alert(" Cette page a été générée le " + last_updated_value
-    + "</br></br>\nSoit <b>" + jQuery.timeago( year + "-" + month + "-" + day + "T" + hours + ":" + mins + ":" + secs + "+01:00") + "</b>"
-    + ".</br></br>\n© Lilian BESSON 2011-2016.</br>\n <small>Merci au plugin jQuery.TimeAgo pour le calcul !</small>", {layout:'center', type:'success'});
+{% if last_updated %}Mousetrap.bind(["u"], function() {  // '%d %m %Y, %Hh:%Mm:%Ss'
+   var last_updated_value = "{{ last_updated }}" || "30 09 2016, 12h:00m:00s";
+    var day   = last_updated_value.substring(0,  2 ) || "30";
+    var month = last_updated_value.substring(3,  5 ) || "09";
+    var year  = last_updated_value.substring(6,  10) || "2016";
+    var hours = last_updated_value.substring(12, 14) || "12";
+    var mins  = last_updated_value.substring(16, 18) || "00";
+    var secs  = last_updated_value.substring(20, 22) || "00";
+   alert(" Cette page a été mise à jour le " + last_updated_value
+    + ".</br></br>\nSoit <b>" + jQuery.timeago( year + "-" + month + "-" + day + "T" + hours + ":" + mins + ":" + secs + "+00:00" ) + "</b>"
+    + ".</br></br>\nCréé par Lilian Besson, © 2011-2016.</br>\n <small>Merci au plugin jQuery.TimeAgo pour le calcul !</small>", {layout:'center', type:'success'});
  });{% endif %}
   Mousetrap.bind(["q"], function(){
     // console.log("[INFO] Loading SquirtFR from http://lbesson.bitbucket.org/squirt/squirt.js?src=layout.html");
