--- a/README.html
+++ b/README.html
@@ -1,74 +1,91 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"/><title>https://bitbucket.org/lbesson/web-sphinx</title></head><body><xmp>
-# Web Pages Sphinx
-The new generation of my web pages, generated with [Sphinx](<http://sphinx-doc.org>) v*1.4a0+*.
-Currently this *projet* is in version *2.5* (*public* release) !
+<!DOCTYPE html><html><head><meta charset="utf-8"/><title>Lilian Besson's Web Pages - using Sphinx</title></head><body><xmp>
+# [Lilian Besson](https://bitbucket.org/lbesson/)'s Web Pages - using Sphinx
+[My web pages](http://perso.crans.org/besson/) are currently generated with [Sphinx Doc](http://sphinx-doc.org) (v*1.5+*).
+
+[![Website http://perso.crans.org/besson/](https://img.shields.io/website-up-down-green-red/http/perso.crans.org.svg)](http://perso.crans.org/besson/)
+[![Made with Python v3.5.2+](https://img.shields.io/badge/Made%20with-Python-1f425f.svg)](https://www.python.org/)
+[![Made with Sphinx v1.5.1+](https://img.shields.io/badge/Made%20with-sphinx-1f425f.svg)](http://sphinx-doc.org/)
+
+I have been using [Sphinx](http://sphinx-doc.org) [since 2012](https://bitbucket.org/lbesson/web-sphinx/commits/b3a0205a3f2fe288f91e9bceb9f1ac6f6335bce3), and I like it very much!
+(Currently this *project* is in version *2.6*, *public* release!)
+
+[![Maintained? Yes!](https://img.shields.io/badge/Maintained%3F-yes-green.svg)](https://bitbucket.org/lbesson/web-sphinx/commits/)
+[![Ask Me Anything!](https://img.shields.io/badge/Ask%20me-anything-1abc9c.svg)](https://bitbucket.org/lbesson/ama)
 
 ## Where are those pages ?
+==> On [http://perso.crans.org/besson/](<http://perso.crans.org/besson/> "Check this one !").   [![Website perso.crans.org](https://img.shields.io/website-up-down-green-red/http/perso.crans.org.svg)](http://perso.crans.org/)
 
-### On line :
- * [perso.crans.org/besson](<http://perso.crans.org/besson/> "Check this one !") ;
- * [www.dptinfo.ens-cachan.fr/~lbesson](<http://www.dptinfo.ens-cachan.fr/~lbesson/> "And this one too !") is now just a redirection to the precedent one.
-
-## About
+## What do those pages contain ?
 Some pages host my résumé, others are just experiments, about Sphinx and many other things.
-A few pages talk about some points I am interesting to (GNU Nano, Sublime Text 3, Firefox, hitch-hiking, maths, Pokémon etc)...
+A few pages talk about some points I am interested in (GNU Nano, Sublime Text 3, Firefox, hitch-hiking, maths, Pokémon etc)...
 
-## Other repos
-To limit the size of this one, I used an other repo to store
-the scripts/ folder : [web-sphinx-scripts](<https://bitbucket.org/lbesson/web-sphinx-scripts/> "Hehe").
+## Other repository
+To limit the size of this one, I used an other git repository to store the `scripts/` folder : [web-sphinx-scripts](<https://bitbucket.org/lbesson/web-sphinx-scripts/> "Hehe").
 
-This second repo mainly hosts some Javascript scripts
-(GNU Plot & OCaml & Python toplevel, `shortcuts.js`, `simpletrailimage.js` etc),
-and also a **complete** Python distribution,
-used with python.opt.js to embed a Python toplevel in my web pages (I know, it's useless, but so funny !).
+This second repository mainly hosts some Javascript scripts
+(GNU Plot & OCaml & Python toplevel, `shortcuts.js`, etc),
+and also a **complete** Python distribution, used with `python.opt.js` to embed a Python toplevel in my web pages (I know, it's useless, but so funny !).
 
 ----
 
 ### Author
-© Lilian Besson, 2011-2016.
+© [Lilian Besson](http://perso.crans.org/besson/), [2011-2016](https://bitbucket.org/lbesson/web-sphinx/commits/).
 
 ### Languages
- * reStructuredText (mainly, for the content of the pages),
- * Jinja Templating (for changing appearance of the web pages),
- * Javascript (for some interactive stuff),
- * CSS (for styling),
- * HTML5 (to include a few web components in some pages),
- * Python (for Sphinx parametring),
- * And probably another I forgot!
+ * the [reStructuredText](http://docutils.sourceforge.net/rst.html) plain text markup language, mainly, for the content of the pages,
+ * [Jinja](http://sphinx-doc.org/templating.html#jinja-sphinx-templating-primer) [templates](.templates/) (for changing appearance of the web pages),
+ * [Javascript](https://en.wikipedia.org/wiki/Javascript) in the [`.static/`](.static/) folder,  for some interactive stuff on the web-pages. See [this page for some details](http://perso.crans.org/besson/js.html),
+ * [CSS](https://en.wikipedia.org/wiki/CSS) in the [`.static/`](.static/) folder, for an improved style, based on the (old) default Sphinx style,
+ * [HTML](https://en.wikipedia.org/wiki/HTML) (to include a few web components in some pages),
+ * [Python](https://www.Python.org/) (for Sphinx configuration, [`conf.py`](conf.py) file).
 
 ----
 
 ## Requirements ?
 
-This project use the following software :
+This project use the following software:
 
- * Python 2.7+;
- * Python Sphinx (v1.2+);
- * GNU Make (other versions of Make should *NOT* work);
- * LaTeX (pdflatex, and hevea) (*not* required for building html);
- * git (not required for building);
- * rsync (or scp), for uploading;
- * ack-grep (or grep);
- * GnuPlot (but not Gnu Octave);
- * GnuPG (pgp);
- * GraphViz and Dot graph;
- * rst2pdf, rst2html, rst2s5 (included in the docutils package) (*not* required for building html);
- * and the following Sphinx contrib extensions :
+ * [Python](https://www.Python.org/), version [2.7+](https://docs.python.org/2/) or [3.4+](https://docs.python.org/3/). [![PyPI pyversions](https://img.shields.io/pypi/pyversions/ansicolortags.svg)](https://pypi.python.org/pypi/ansicolortags/)
+ * [Python Sphinx](http://sphinx-doc.org) (currently v1.5+, but v1.3+ should be enough);
+ * [GNU Make](https://www.gnu.org/software/make/) (other versions of Make should *NOT* work);
+ * `rst2pdf`, `rst2html`, `rst2s5`, included in the [docutils package](http://docutils.sourceforge.net/), only required to build other formats, but *not* required for building basic HTML;
+ * *Optional:* [LaTeX](http://www.latex-project.org/) (`pdflatex`, and `hevea`) (*not* required for building html);
+ * [git](https://git-scm.com/) (but not required for building);
+ * [rsync](https://rsync.samba.org/), for uploading the update pages online;
+ * [GNU grep](https://www.gnu.org/software/grep/);
+ * [GnuPG](https://www.gnupg.org/) (`gpg`);
+ * and the following [Sphinx contrib extensions](https://bitbucket.org/birkenfeld/sphinx-contrib/), to be installed manually :
 
-    * cheeseshop;
-    * gnuplot;
-    * autorun;
-    * graphviz;
-    * youtube;
-    * many other, see [the conf.py](conf.py) file.
+    * [autorun](https://bitbucket.org/birkenfeld/sphinx-contrib/src/default/autorun/);
+    * [bitbucket](https://bitbucket.org/dhellmann/sphinxcontrib-bitbucket);
+    * [cheeseshop](https://bitbucket.org/birkenfeld/sphinx-contrib/src/default/cheeseshop/);
+    * [gnuplot](https://bitbucket.org/birkenfeld/sphinx-contrib/src/default/gnuplot/);
+    * [youtube](https://bitbucket.org/birkenfeld/sphinx-contrib/src/default/youtube/);
 
- * (optional) ocaml, octave, to embed examples;
- * many others, but cannot list them all.
+ * these [Python packages, from PyPI](https://pypi.python.org/): [ansicolortags](https://pypi.python.org/pypi/ansicolortags/), [sphinx_pyreverse](https://pypi.python.org/pypi/sphinx_pyreverse/), [sphinx_git](https://pypi.python.org/pypi/sphinx_git/). Install them with `sudo pip install ansicolortags sphinx_pyreverse sphinx_git`;
+ * *Optional:* GnuPlot (but *not* GNU Octave), only for [these embedded examples](http://perso.crans.org/besson/gnuplot_embed.html);
+ * *Optional:* GraphViz and Dot graph (`dot`), only for [these embedded examples](http://perso.crans.org/besson/graph.fr.html);
+ * *Optional:* Ocaml, only for [these embedded examples](http://perso.crans.org/besson/runblock.en.html#adding-support-for-another-language-ocaml).
+
+
+To install all these dependencies, use [brew](https://brew.sh/) on Mac OS, or your package manager on Linux/UNIX.
 
 ## License
 This project is released under the **GPLv3 license**, for more details,
 take a look at the [LICENSE file](http://perso.crans.org/besson/LICENSE.html) in the source.
 
+[![GPLv3 license](https://img.shields.io/badge/License-GPLv3-blue.svg)](http://perso.crans.org/besson/LICENSE.html)
+
 *Basically, that allow you to use all or part of the project for you own business.*
+
+[![ForTheBadge built-with-love](http://ForTheBadge.com/images/badges/built-with-love.svg)](https://bitbucket.org/lbesson/web-sphinx/commits/)
+
+[![ForTheBadge uses-badges](http://ForTheBadge.com/images/badges/uses-badges.svg)](http://ForTheBadge.com)
+[![ForTheBadge uses-git](http://ForTheBadge.com/images/badges/uses-git.svg)](https://bitbucket.org/lbesson)
+[![ForTheBadge uses-html](http://ForTheBadge.com/images/badges/uses-html.svg)](http://ForTheBadge.com)
+[![ForTheBadge uses-css](http://ForTheBadge.com/images/badges/uses-css.svg)](http://ForTheBadge.com)
+[![ForTheBadge uses-js](http://ForTheBadge.com/images/badges/uses-js.svg)](http://ForTheBadge.com)
+
+[![Analytics](https://ga-beacon.appspot.com/UA-38514290-17/bitbucket.org/lbesson/web-sphinx/README.md?pixel)](https://bitbucket.org/lbesson/web-sphinx)
 
 </xmp><script type="text/javascript" src="http://lbesson.bitbucket.org/md/strapdown.min.js?beacon=y"></script></body></html>
